tests/ui/resolve/issue-31845.stderr
error[E0425]: cannot find function `g` in this scope
  --> $DIR/issue-31845.rs:7:12
   |
LL |            g();
   |            ^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
